# DS24-Linux-Delphi-Resources

./: .gitignore  LICENSE  README.md
.github/workflows/: app-build.yml
api-test/: TestForSmoke.test_books.approved.json  TestForSmoke.test_healthcheck.approved.txt  do-test.sh  pyproject.toml  smoketest.py
app/: MyWebmodule.pas  build-app.ps1  clone-dependencies.ps1  ds24_app.dpr  ds24_app.dproj  readme.md  save-version.ps1  version.inc
app/Books/: Books.Controller.pas  Books.Models.pas  Books.Queries.pas
app/Checks/: Checks.Controller.pas
app/Globals/: DataMod_Database.dfm  DataMod_Database.pas  Globals.pas  MVCServer.pas  MyWebmodule.pas  Settings.pas  StartupParams.pas
app/Logging/: Logging.Console.pas  Logging.Interfaces.pas  Logging.SysLog.pas
azure-restart-app/: install-requirements.sh  readme.md  restart-app.sh
container-app-docker/: Dockerfile  readme.md
example-resources/: db-cleanup.sql  db-populate.sql
more-delphi/: Daemon.pas  Linux-Exec.pas  SyncState.pas
terraform-azure/: api-user.tf  config.tf  container-app.tf  container-reg.tf  mssql.tf  readme.md  resource-group.tf  variables.tf
