[tool.poetry]
name = "api-test"
version = "0.1.0"
description = ""
authors = ["Partouf <partouf@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
approvaltests = "^11.1.3"
pytest = "^8.1.1"
pytest-approvaltests = "^0.2.4"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
